--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "animate.css": "^3.5.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
