--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "tailwindcss": "^0.1.5",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
+    "vue-smooth-scroll": "^1.0.13",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
