Add Analytics dependency

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "vue": "^2.5.2",
+    "vue-analytics": "^5.3.1",
     "vue-router": "^3.0.1",
     "vue-scroll-reveal": "^1.0.3"
   },
