--- a/package.json
+++ b/package.json
@@ -15,65 +15,68 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "vue": "^2.5.5",
+    "vue": "^2.5.6",
     "vue-analytics": "^5.3.2",
     "vue-router": "^3.0.1",
     "vue-scroll-reveal": "^1.0.3"
   },
   "devDependencies": {
     "animate.css": "^3.5.2",
-    "node-sass": "^4.7.1",
-    "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.1",
-    "tailwindcss": "^0.2.0",
-    "vue-smooth-scroll": "^1.0.13",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
+    "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "glob-all": "^3.1.0",
     "html-webpack-plugin": "^2.30.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "babel-jest": "^21.0.2",
     "jest": "^21.2.0",
-    "vue-jest": "^1.0.2",
-    "node-notifier": "^5.1.2",
-    "chromedriver": "^2.27.2",
-    "cross-spawn": "^5.0.1",
     "nightwatch": "^0.9.12",
-    "selenium-server": "^3.0.1",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "node-notifier": "^5.1.2",
+    "node-sass": "^4.7.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
     "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "purgecss": "^0.11.0",
+    "purgecss-webpack-plugin": "^0.11.0",
+    "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.1",
+    "selenium-server": "^3.0.1",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "tailwindcss": "^0.2.2",
+    "url-loader": "^0.6.2",
+    "vue-jest": "^1.0.2",
+    "vue-loader": "^13.3.0",
+    "vue-smooth-scroll": "^1.0.13",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.5.6",
     "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
