--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "style-ext-html-webpack-plugin": "^3.4.5",
     "vue": "^2.5.8",
     "vue-analytics": "^5.3.2",
     "vue-router": "^3.0.1",
