--- a/package.json
+++ b/package.json
@@ -1,116 +1,39 @@
 {
   "name": "lichter.io",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "My own website and CV https://lichter.io",
   "author": "Alexander Lichter <alichter@developmint.de>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "unit": "jest test/unit/specs --coverage",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "build": "node build/build.js"
+    "dev": "cross-env HOST=0.0.0.0 PORT=3000 nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "precommit": "npm run lint"
   },
   "dependencies": {
-    "style-ext-html-webpack-plugin": "^3.4.5",
-    "vue": "^2.5.13",
-    "vue-analytics": "^5.7.1",
-    "vue-router": "^3.0.1",
-    "vue-scroll-reveal": "^1.0.3"
+    "cross-env": "^5.1.1",
+    "nuxt": "^1.0.0-rc11",
+    "style-ext-html-webpack-plugin": "^3.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.3",
-    "babel-core": "^6.22.1",
     "babel-eslint": "^8.0.3",
-    "babel-jest": "^22.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "chromedriver": "^2.34.0",
-    "copy-webpack-plugin": "^4.3.0",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^4.13.1",
+    "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.6",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "glob-all": "^3.1.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.0.3",
-    "nightwatch": "^0.9.19",
-    "node-notifier": "^5.1.2",
     "node-sass": "^4.7.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.9",
     "purgecss": "^0.16.0",
+    "vue-scroll-reveal": "^1.0.3",
     "purgecss-webpack-plugin": "^0.16.0",
-    "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.1",
-    "selenium-server": "^3.8.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
     "tailwindcss": "^0.4.0",
-    "url-loader": "^0.6.2",
-    "vue-jest": "^1.4.0",
-    "vue-loader": "^13.6.0",
-    "vue-smooth-scroll": "^1.0.13",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.7",
-    "webpack-merge": "^4.1.0"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    },
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
-    },
-    "setupFiles": [
-      "<rootDir>/test/unit/setup"
-    ],
-    "mapCoverage": true,
-    "coverageDirectory": "<rootDir>/test/unit/coverage",
-    "collectCoverageFrom": [
-      "src/**/*.{js,vue}",
-      "!src/main.js",
-      "!src/router/index.js",
-      "!**/node_modules/**"
-    ]
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "vue-smooth-scroll": "^1.0.13"
+  }
 }
