--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "style-ext-html-webpack-plugin": "^3.4.5"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.0.2",
     "autoprefixer": "^7.2.3",
     "babel-eslint": "^8.0.3",
     "eslint": "^4.3.0",
@@ -30,10 +31,10 @@
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.7.2",
     "purgecss": "^0.16.0",
-    "vue-scroll-reveal": "^1.0.3",
     "purgecss-webpack-plugin": "^0.16.0",
     "sass-loader": "^6.0.6",
     "tailwindcss": "^0.4.0",
+    "vue-scroll-reveal": "^1.0.3",
     "vue-smooth-scroll": "^1.0.13"
   }
 }
