--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "cross-env": "^5.1.1",
+    "glob-all": "^3.1.0",
     "nuxt": "^1.0.0-rc11",
     "style-ext-html-webpack-plugin": "^3.4.5"
   },
