--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "lichter.io",
   "version": "2.0.0",
-  "description": "My own website and CV https://lichter.io",
+  "description": "The personal website and online CV of Alexander Lichter, an impassioned developer",
   "author": "Alexander Lichter <alichter@developmint.de>",
   "private": true,
   "scripts": {
     "dev": "cross-env HOST=0.0.0.0 PORT=3000 nuxt",
-    "build": "nuxt build",
+    "build": "nuxt build --universal",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "cross-env": "^5.1.1",
+    "cross-env": "^5.1.3",
     "glob-all": "^3.1.0",
-    "nuxt": "^1.0.0-rc11",
-    "style-ext-html-webpack-plugin": "^3.4.5"
+    "nuxt": "^1.1.1",
+    "style-ext-html-webpack-plugin": "^3.4.6"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
-    "autoprefixer": "^7.2.3",
-    "babel-eslint": "^8.0.3",
-    "eslint": "^4.3.0",
+    "@nuxtjs/pwa": "^2.0.5",
+    "autoprefixer": "^7.2.5",
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^4.0.1",
@@ -31,11 +32,11 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.7.2",
-    "purgecss": "^0.16.0",
-    "purgecss-webpack-plugin": "^0.16.0",
+    "purgecss": "^0.18.1",
+    "purgecss-webpack-plugin": "^0.18.0",
     "sass-loader": "^6.0.6",
     "tailwindcss": "^0.4.0",
-    "vue-scroll-reveal": "^1.0.3",
+    "vue-scroll-reveal": "^1.0.5",
     "vue-smooth-scroll": "^1.0.13"
   }
 }
