--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.2.2",
+    "husky": "^0.15.0-rc.3",
     "node-sass": "^4.7.2",
     "purgecss": "^0.20.0",
     "purgecss-webpack-plugin": "^0.20.0",
@@ -38,5 +39,10 @@
     "tailwindcss": "^0.4.1",
     "vue-scroll-reveal": "^1.0.5",
     "vue-smooth-scroll": "^1.0.13"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
