--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lichter.io",
-  "version": "2.0.1",
-  "description": "The personal website and online CV of Alexander Lichter, an impassioned developer",
-  "author": "Alexander Lichter <alichter@developmint.de>",
+  "version": "2.0.2",
+  "description": "The personal website and online CV of Alexander Lichter, a passionate developer",
+  "author": "Alexander Lichter <hello@lichter.io>",
   "private": true,
   "scripts": {
     "dev": "cross-env HOST=0.0.0.0 PORT=3000 nuxt",
