--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "cross-env": "^5.1.5",
     "glob-all": "^3.1.0",
-    "nuxt": "^1.4.0",
-    "style-ext-html-webpack-plugin": "^3.4.7"
+    "nuxt-edge": "^2.0.0-25371044.7f6b7d8"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
