--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "cross-env": "^5.1.4",
     "glob-all": "^3.1.0",
-    "nuxt-edge": "latest"
+    "nuxt-edge": "^2.0.0-25371252.948d566"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
