Add cookie info

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^5.1.5",
     "glob-all": "^3.1.0",
     "nuxt-edge": "latest",
+    "vue-cookieconsent-component": "^1.1.0",
     "vue-next-level-scroll": "^1.1.0"
   },
   "devDependencies": {
