--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "cross-env": "^5.1.5",
+    "cross-env": "^5.1.6",
     "glob-all": "^3.1.0",
-    "nuxt-edge": "latest",
+    "nuxt-edge": "^2.0.0-25450972.6603046",
+    "vue-analytics": "^5.12.2",
     "vue-cookieconsent-component": "^1.1.0",
-    "vue-if-bot": "^1.0.1",
+    "vue-if-bot": "^1.1.2",
     "vue-next-level-scroll": "^1.1.0"
   },
   "devDependencies": {
@@ -33,10 +34,10 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-vue": "^4.5.0",
-    "husky": "^1.0.0-rc.4",
+    "husky": "^1.0.0-rc.7",
     "node-sass": "^4.9.0",
-    "purgecss": "^0.21.0",
-    "purgecss-webpack-plugin": "^1.0.3",
+    "purgecss": "^1.0.0",
+    "purgecss-webpack-plugin": "^1.1.0",
     "sass-loader": "^7.0.1",
     "tailwindcss": "^0.5.3",
     "vue-scroll-reveal": "^1.0.8"
