--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Alexander Lichter <hello@lichter.io>",
   "private": true,
   "scripts": {
-    "dev": "cross-env HOST=0.0.0.0 PORT=3000 nuxt",
+    "dev": "cross-env HOST=0.0.0.0 nuxt",
     "build": "nuxt build --universal",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -15,30 +15,30 @@
   "dependencies": {
     "cross-env": "^5.1.6",
     "glob-all": "^3.1.0",
-    "nuxt-edge": "^2.0.0-25450972.6603046",
+    "nuxt-edge": "^2.0.0-25471736.3b2ed03",
     "vue-analytics": "^5.12.2",
     "vue-cookieconsent-component": "^1.1.0",
     "vue-if-bot": "^1.1.2",
-    "vue-next-level-scroll": "^1.1.0"
+    "vue-next-level-scroll": "^1.1.2"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/pwa": "^2.0.8",
-    "autoprefixer": "^8.5.0",
+    "autoprefixer": "^8.6.0",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-vue": "^4.5.0",
-    "husky": "^1.0.0-rc.7",
+    "husky": "^1.0.0-rc.8",
     "node-sass": "^4.9.0",
-    "purgecss": "^1.0.0",
-    "purgecss-webpack-plugin": "^1.1.0",
-    "sass-loader": "^7.0.1",
+    "purgecss": "^1.0.1",
+    "purgecss-webpack-plugin": "^1.2.0",
+    "sass-loader": "^7.0.3",
     "tailwindcss": "^0.5.3",
     "vue-scroll-reveal": "^1.0.8"
   },
