--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^5.2.0",
     "glob-all": "^3.1.0",
     "nuxt-edge": "^2.0.0-25621471.65432e6",
+    "shrink-ray-current": "^2.1.2",
     "vue-analytics": "^5.16.0",
     "vue-cookieconsent-component": "^1.2.0",
     "vue-if-bot": "^1.2.0",
