--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "glob-all": "^3.1.0",
+    "helmet": "^3.13.0",
     "nuxt-edge": "^2.0.0-25621471.65432e6",
     "shrink-ray-current": "^2.1.2",
     "vue-analytics": "^5.16.0",
