--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "glob-all": "^3.1.0",
-    "helmet": "^3.13.0",
-    "nuxt-edge": "^2.0.0-25621471.65432e6",
+    "helmet": "^3.14.0",
+    "nuxt-edge": "^2.2.0-25657632.95428c2",
     "shrink-ray-current": "^2.1.2",
     "vue-analytics": "^5.16.0",
     "vue-cookieconsent-component": "^1.2.0",
@@ -25,24 +25,24 @@
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.0.2",
-    "@nuxtjs/pwa": "^2.5.0",
+    "@nuxtjs/pwa": "^2.6.0",
     "autoprefixer": "^9.1.5",
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.6.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.0",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^4.7.1",
-    "husky": "^1.0.0-rc.14",
+    "husky": "^1.1.2",
     "node-sass": "^4.9.3",
     "purgecss": "^1.1.0",
-    "purgecss-webpack-plugin": "^1.3.0",
+    "purgecss-webpack-plugin": "^1.3.1",
     "sass-loader": "^7.1.0",
-    "tailwindcss": "^0.6.5",
-    "vue-scroll-reveal": "^1.0.8"
+    "tailwindcss": "^0.6.6",
+    "vue-scroll-reveal": "^1.0.11"
   },
   "husky": {
     "hooks": {
