--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-next-level-scroll": "^1.1.2"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config": "0.0.1",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/pwa": "^2.6.0",
     "autoprefixer": "^9.1.5",
@@ -32,6 +33,7 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.24.1",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
