--- a/package.json
+++ b/package.json
@@ -13,34 +13,32 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt-edge": "^2.2.0-25657632.95428c2",
-    "nuxt-purgecss": "^0.0.1",
-    "vue-analytics": "^5.16.0",
-    "vue-cookieconsent-component": "^1.2.0",
-    "vue-if-bot": "^1.2.0",
-    "vue-next-level-scroll": "^1.2.0"
-  },
-  "devDependencies": {
     "@nuxtjs/eslint-config": "0.0.1",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/pwa": "^2.6.0",
     "babel-eslint": "^10.0.1",
+    "node-sass": "^4.9.3",
+    "nuxt-edge": "^2.3.0-25671971.3db27fe",
+    "nuxt-purgecss": "^0.0.1",
+    "sass-loader": "^7.1.0",
+    "tailwindcss": "^0.6.6",
+    "vue-analytics": "^5.16.0",
+    "vue-cookieconsent-component": "^1.2.0",
+    "vue-if-bot": "^1.2.0",
+    "vue-next-level-scroll": "^1.2.0",
+    "vue-scroll-reveal": "^1.0.11"
+  },
+  "devDependencies": {
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.24.2",
+    "eslint-plugin-jest": "^21.26.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^4.7.1",
-    "husky": "^1.1.2",
-    "node-sass": "^4.9.3",
-    "purgecss": "^1.1.0",
-    "purgecss-webpack-plugin": "^1.3.1",
-    "sass-loader": "^7.1.0",
-    "tailwindcss": "^0.6.6",
-    "vue-scroll-reveal": "^1.0.11"
+    "husky": "^1.1.2"
   },
   "husky": {
     "hooks": {
