--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/netlify-files": "^1.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
-    "nuxt-edge": "^2.9.0-26104328.b22e0543",
+    "@nuxtjs/sitemap": "^1.3.1",
+    "date-fns": "^2.3.0",
+    "nuxt-edge": "^2.9.0-26089929.de7ed24b",
     "nuxt-purgecss": "^0.2.1",
     "postcss-nested": "^4.1.2",
-    "tailwindcss": "^1.1.2",
-    "vue-analytics": "^5.17.2",
+    "tailwindcss": "^1.1.1",
     "vue-cookieconsent-component": "^1.2.0",
     "vue-if-bot": "^1.2.0",
     "vue-next-level-scroll": "^1.2.0",
