--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
   publish = "dist"
   command = "yarn generate"
+  functions = "./functions-dist"
 [build.environment]
   NODE_VERSION = "11"
