--- a/package.json
+++ b/package.json
@@ -7,26 +7,34 @@
   "license": "MIT",
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "generate": "nuxt generate --fail-on-error && yarn lambda-build",
+    "lambda-dev": "cross-env NODE_ENV=development yarn lambda-build && cross-env NODE_ENV=development yarn lambda-serve",
+    "lambda-build": "netlify-lambda build ./functions",
+    "lambda-serve": "netlify-lambda serve ./functions",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.6.0",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/netlify-files": "^1.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "@nuxtjs/sitemap": "^1.3.1",
+    "cross-env": "^6.0.3",
     "date-fns": "^2.3.0",
-    "nuxt-edge": "^2.9.0-26089929.de7ed24b",
+    "netlify-lambda": "^1.6.3",
+    "nuxt-edge": "^2.10.0-26176331.15fa12fc",
     "nuxt-purgecss": "^0.2.1",
+    "nuxt-svg-loader": "^1.0.1",
+    "postcss-extend-rule": "^3.0.0",
     "postcss-nested": "^4.1.2",
+    "stripe": "^7.10.0",
     "tailwindcss": "^1.1.1",
+    "vue-confetti": "^2.0.5",
     "vue-cookieconsent-component": "^1.2.0",
     "vue-if-bot": "^1.2.0",
     "vue-next-level-scroll": "^1.2.0",
-    "vue-scroll-reveal": "^1.0.11"
+    "vue-scroll-reveal": "^1.0.11",
+    "vue-stripe-elements-plus": "^0.3.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "1.1.2",
@@ -37,7 +45,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "yarn lint"
     }
   }
 }
