--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nuxt-svg-loader": "^1.0.1",
     "postcss-extend-rule": "^3.0.0",
     "postcss-nested": "^4.1.2",
+    "smoothscroll-polyfill": "^0.4.4",
     "stripe": "^7.10.0",
     "tailwindcss": "^1.1.1",
     "vue-confetti": "^2.0.5",
