--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/netlify-files": "^1.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "@nuxtjs/sitemap": "^2.0.0",
+    "@vue/composition-api": "^0.3.2",
     "cross-env": "^6.0.3",
     "date-fns": "^2.3.0",
     "netlify-lambda": "^1.6.3",
