chore: update deps

--- a/package.json
+++ b/package.json
@@ -14,24 +14,25 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.5",
-    "@nuxtjs/google-analytics": "^2.2.3",
-    "@nuxtjs/netlify-files": "^1.0.0",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "@nuxtjs/sitemap": "^2.0.1",
-    "@vue/composition-api": "^0.3.4",
-    "cross-env": "^7.0.0",
-    "date-fns": "^2.9.0",
-    "netlify-lambda": "^1.6.3",
-    "nuxt-edge": "^2.11.1-26362097.b71eaee",
-    "nuxt-purgecss": "^0.2.1",
+    "@nuxt/http": "^0.5.12",
+    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/composition-api": "^0.12.3",
+    "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/netlify-files": "^1.2.0",
+    "@nuxtjs/pwa": "^3.0.2",
+    "@nuxtjs/sitemap": "^2.4.0",
+    "@nuxtjs/tailwindcss": "^3.0.2",
+    "cross-env": "^7.0.2",
+    "date-fns": "^2.16.1",
+    "netlify-lambda": "^2.0.1",
+    "nuxt-edge": "^2.14.5-26661633.d864b2bd",
     "nuxt-svg-loader": "^1.2.0",
     "postcss-extend-rule": "^3.0.0",
-    "postcss-nested": "^4.1.2",
+    "postcss-nested": "^4.2.3",
     "smoothscroll-polyfill": "^0.4.4",
-    "stripe": "^8.18.0",
-    "tailwindcss": "^1.2.0",
-    "vue-confetti": "^2.0.7",
+    "stripe": "^8.94.0",
+    "tailwindcss": "^1.8.6",
+    "vue-confetti": "^2.2.0",
     "vue-cookieconsent-component": "^1.2.0",
     "vue-if-bot": "^1.2.0",
     "vue-next-level-scroll": "^1.2.0",
@@ -39,11 +40,11 @@
     "vue-stripe-elements-plus": "^0.3.2"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "2.0.2",
-    "babel-eslint": "^10.0.2",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
-    "husky": "^4.2.3"
+    "@nuxtjs/eslint-config": "3.1.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.8.1",
+    "eslint-loader": "^4.0.2",
+    "husky": "^4.3.0"
   },
   "husky": {
     "hooks": {
