chore: improve css and use tailwind typography

--- a/package.json
+++ b/package.json
@@ -19,16 +19,15 @@
     "@nuxtjs/composition-api": "^0.13.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/netlify-files": "^1.2.0",
-    "@nuxtjs/pwa": "^3.2.1",
+    "@nuxtjs/pwa": "^3.2.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^3.1.0",
+    "@tailwindcss/typography": "^0.2.0",
     "cross-env": "^7.0.2",
     "date-fns": "^2.16.1",
     "netlify-lambda": "^2.0.1",
     "nuxt-edge": "^2.14.7-26709159.a748cf0c",
     "nuxt-svg-loader": "^1.2.0",
-    "postcss-extend-rule": "^3.0.0",
-    "postcss-nested": "^5.0.1",
     "smoothscroll-polyfill": "^0.4.4",
     "stripe": "^8.111.0",
     "tailwindcss": "^1.9.1",
