chore: update talks deps and lint

--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
   "dependencies": {
     "@nuxt/http": "^0.6.0",
     "@nuxtjs/axios": "^5.12.2",
-    "@nuxtjs/composition-api": "^0.13.0",
+    "@nuxtjs/composition-api": "^0.15.1",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/netlify-files": "^1.2.0",
     "@nuxtjs/pwa": "^3.2.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^3.1.0",
-    "@tailwindcss/typography": "^0.2.0",
+    "@tailwindcss/typography": "^0.3.1",
     "cross-env": "^7.0.2",
     "date-fns": "^2.16.1",
     "netlify-lambda": "^2.0.1",
-    "nuxt-edge": "^2.14.7-26709159.a748cf0c",
+    "nuxt-edge": "^2.14.8-26768191.9ce75c5d",
     "nuxt-svg-loader": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.4",
     "stripe": "^8.111.0",
-    "tailwindcss": "^1.9.1",
+    "tailwindcss": "^2.0.1-compat",
     "vue-confetti": "^2.2.1",
     "vue-cookieconsent-component": "^1.2.0",
     "vue-if-bot": "^1.2.0",
@@ -39,7 +39,7 @@
     "vue-stripe-elements-plus": "^0.3.2"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "3.1.0",
+    "@nuxtjs/eslint-config": "5.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.11.0",
     "eslint-loader": "^4.0.2",
