--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
+    "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
@@ -27,7 +28,6 @@
     "tailwindcss": "^3.2.4",
     "vite-svg-loader": "^3.6.0",
     "vue-confetti": "^2.3.0",
-    "vue-cookieconsent-component": "^1.2.0",
-    "vue-stripe-elements-plus": "^1.0.3"
+    "vue-cookieconsent-component": "^1.2.0"
   }
 }
