--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwindcss": "^3.2.4",
     "vite-svg-loader": "^3.6.0",
     "vue-confetti": "^2.3.0",
-    "vue-cookieconsent-component": "^1.2.0"
+    "vue-cookieconsent-component": "^1.2.0",
+    "vue-gtag-next": "^1.14.0"
   }
 }
