--- a/package.json
+++ b/package.json
@@ -1,53 +1,34 @@
 {
   "name": "lichter.io",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "description": "The personal website and online CV of Alexander Lichter, a passionate developer",
   "author": "Alexander Lichter <npm@lichter.io>",
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "nuxt",
-    "generate": "nuxt generate --fail-on-error && yarn lambda-build",
-    "lambda-dev": "cross-env NODE_ENV=development yarn lambda-build && cross-env NODE_ENV=development yarn lambda-serve",
-    "lambda-build": "netlify-lambda build ./functions",
-    "lambda-serve": "netlify-lambda serve ./functions",
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
-  "dependencies": {
-    "@nuxt/http": "^0.6.0",
-    "@nuxtjs/axios": "^5.12.2",
-    "@nuxtjs/composition-api": "^0.16.4",
-    "@nuxtjs/google-analytics": "^2.4.0",
-    "@nuxtjs/netlify-files": "^1.2.0",
-    "@nuxtjs/pwa": "^3.2.2",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/tailwindcss": "^3.1.0",
-    "@tailwindcss/typography": "^0.3.1",
-    "cross-env": "^7.0.2",
-    "date-fns": "^2.16.1",
-    "netlify-lambda": "^2.0.1",
-    "nuxt-edge": "^2.14.8-26775392.e02fecdf",
-    "nuxt-svg-loader": "^1.2.0",
-    "smoothscroll-polyfill": "^0.4.4",
-    "stripe": "^8.111.0",
-    "tailwindcss": "^2.0.1-compat",
-    "vue-confetti": "^2.2.1",
-    "vue-cookieconsent-component": "^1.2.0",
-    "vue-if-bot": "^1.2.0",
-    "vue-next-level-scroll": "^1.2.0",
-    "vue-scroll-reveal": "^1.0.11",
-    "vue-stripe-elements-plus": "^0.3.2"
-  },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "5.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.11.0",
-    "eslint-loader": "^4.0.2",
-    "husky": "^4.3.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint"
-    }
+    "@kevinmarrec/nuxt-pwa": "^0.13.0",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/scrollreveal": "^0.0.8",
+    "@vueuse/core": "^9.6.0",
+    "@vueuse/nuxt": "^9.6.0",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.29.3",
+    "husky": "^8.0.2",
+    "nuxt": "^3.0.0",
+    "nuxt-icon": "^0.1.8",
+    "scrollreveal": "^4.0.9",
+    "stripe": "^11.1.0",
+    "tailwindcss": "^3.2.4",
+    "vite-svg-loader": "^3.6.0",
+    "vue-confetti": "^2.3.0",
+    "vue-cookieconsent-component": "^1.2.0",
+    "vue-gtag-next": "^1.14.0"
   }
 }
