--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "tailwindcss": "^3.2.4",
     "vue-confetti": "^2.3.0",
     "vue-gtag-next": "^1.14.0"
-  }
+  },
+  "packageManager": "pnpm@7.18.0"
 }
