--- a/package.json
+++ b/package.json
@@ -12,27 +12,29 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
-    "@headlessui/vue": "^1.7.16",
-    "@nuxt/content": "^2.10.0",
-    "@nuxt/devtools": "^1.0.6",
-    "@nuxt/image": "^1.1.0",
+    "@headlessui/vue": "^1.7.19",
+    "@nuxt/content": "^2.12.0",
+    "@nuxt/devtools": "^1.0.8",
+    "@nuxt/image": "^1.3.0",
     "@nuxtjs/plausible": "^0.2.4",
-    "@nuxtjs/tailwindcss": "^6.10.3",
+    "@nuxtjs/tailwindcss": "^6.11.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/cheerio": "^0.22.35",
-    "@vueuse/core": "^10.7.1",
-    "@vueuse/nuxt": "^10.7.1",
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/nuxt": "^10.7.2",
     "cheerio": "1.0.0-rc.12",
-    "date-fns": "^3.1.0",
+    "date-fns": "^3.3.1",
     "feed": "^4.2.2",
-    "nuxt": "^3.9.1",
+    "nuxt": "^3.10.1",
     "nuxt-icon": "^0.6.8",
-    "nuxt-og-image": "3.0.0-rc.23",
-    "nuxt-schema-org": "^3.3.2",
-    "nuxt-simple-sitemap": "^4.4.1",
+    "nuxt-og-image": "3.0.0-rc.38",
+    "nuxt-schema-org": "^3.3.4",
     "remark-reading-time": "^2.0.1",
     "tailwindcss": "^3.4.1"
   },
-  "packageManager": "pnpm@8.10.5"
+  "packageManager": "pnpm@8.10.5",
+  "dependencies": {
+    "@nuxtjs/sitemap": "^5.1.0"
+  }
 }
