--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
     "feed": "^4.2.2",
     "nuxt": "^3.10.1",
     "nuxt-icon": "^0.6.8",
-    "nuxt-og-image": "3.0.0-rc.38",
-    "nuxt-schema-org": "^3.3.4",
     "remark-reading-time": "^2.0.1",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@nuxtjs/seo": "2.0.0-rc.4"
   },
   "packageManager": "pnpm@8.10.5",
   "dependencies": {
