--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nuxt-schema-org": "^3.3.0",
     "nuxt-simple-sitemap": "^4.2.3",
     "remark-reading-time": "^2.0.1",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   },
   "packageManager": "pnpm@8.10.5"
 }
