--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nuxt": "^3.10.1",
     "nuxt-icon": "^0.6.8",
     "remark-reading-time": "^2.0.1",
+    "typescript": "^5.3.3",
     "tailwindcss": "^3.4.1"
   },
   "packageManager": "pnpm@8.10.5",
