--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
-    "@headlessui/vue": "^1.7.19",
-    "@nuxt/content": "^2.12.0",
-    "@nuxt/devtools": "^1.0.8",
-    "@nuxt/image": "^1.3.0",
+    "@headlessui/vue": "^1.7.23",
+    "@nuxt/content": "^2.13.4",
+    "@nuxt/devtools": "^1.6.4",
+    "@nuxt/image": "^1.8.1",
     "@nuxtjs/plausible": "^0.2.4",
     "@nuxtjs/seo": "2.0.0-rc.8",
-    "@nuxtjs/tailwindcss": "^6.11.4",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/cheerio": "^0.22.35",
-    "@vueuse/core": "^10.7.2",
-    "@vueuse/nuxt": "^10.7.2",
+    "@vueuse/core": "^10.11.1",
+    "@vueuse/nuxt": "^10.11.1",
     "cheerio": "1.0.0-rc.12",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "feed": "^4.2.2",
-    "nuxt": "^3.10.1",
-    "nuxt-icon": "^0.6.8",
+    "nuxt": "^3.14.1592",
+    "nuxt-icon": "^0.6.10",
     "remark-reading-time": "^2.0.1",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2"
   },
   "packageManager": "pnpm@8.10.5",
   "dependencies": {
-    "@nuxtjs/sitemap": "^5.1.0"
+    "@nuxtjs/sitemap": "^5.3.5"
   }
 }
