--- a/package.json
+++ b/package.json
@@ -13,28 +13,39 @@
   },
   "devDependencies": {
     "@headlessui/vue": "^1.7.23",
+    "@iconify-json/heroicons": "^1.2.1",
+    "@iconify-json/logos": "^1.2.3",
+    "@iconify-json/mdi": "^1.2.1",
+    "@iconify-json/ph": "^1.2.1",
+    "@iconify-json/ri": "^1.2.3",
+    "@iconify-json/uil": "^1.2.1",
     "@nuxt/content": "^2.13.4",
     "@nuxt/devtools": "^1.6.4",
     "@nuxt/image": "^1.8.1",
-    "@nuxtjs/plausible": "^0.2.4",
-    "@nuxtjs/seo": "2.0.0-rc.8",
+    "@nuxtjs/plausible": "^1.2.0",
+    "@nuxtjs/seo": "2.0.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/cheerio": "^0.22.35",
-    "@vueuse/core": "^10.11.1",
-    "@vueuse/nuxt": "^10.11.1",
-    "cheerio": "1.0.0-rc.12",
-    "date-fns": "^3.6.0",
+    "@vueuse/core": "^12.0.0",
+    "@vueuse/nuxt": "^12.0.0",
+    "cheerio": "1.0.0",
+    "date-fns": "^4.1.0",
     "feed": "^4.2.2",
     "nuxt": "^3.14.1592",
-    "nuxt-icon": "^0.6.10",
+    "nuxt-icon": "1.0.0-beta.7",
     "remark-reading-time": "^2.0.1",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   },
   "packageManager": "pnpm@8.10.5",
   "dependencies": {
-    "@nuxtjs/sitemap": "^5.3.5"
+    "@nuxtjs/sitemap": "^7.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "nitropack": "2.9.7"
+    }
   }
 }
