--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@iconify-json/uil": "^1.2.1",
     "@nuxt/content": "^2.13.4",
     "@nuxt/devtools": "^1.6.4",
+    "@nuxt/icon": "^1.10.2",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/plausible": "^1.2.0",
     "@nuxtjs/seo": "2.0.2",
@@ -34,7 +35,6 @@
     "date-fns": "^4.1.0",
     "feed": "^4.2.2",
     "nuxt": "^3.14.1592",
-    "nuxt-icon": "1.0.0-beta.7",
     "remark-reading-time": "^2.0.1",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
