--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^4.1.0",
     "feed": "^4.2.2",
     "nuxt": "^3.14.1592",
+    "nuxt-rebundle": "0.0.2",
     "remark-reading-time": "^2.0.1",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
